Bug 1213815 - Update URLSearchParams and URLUtils in webidl files, r=bz