dom/webidl/URL.webidl
@@ -17,9 +17,44 @@
  Constructor(DOMString url, optional DOMString base),
  Exposed=(Window,Worker)]
 interface URL {
+  [Throws]
+  stringifier;
+
+  [Throws]
+  attribute USVString href;
+
+  [Throws]
+  readonly attribute USVString origin;
+
+  [Throws]
+           attribute USVString protocol;
+
+  [Throws]
+           attribute USVString username;
+
+  [Throws]
+           attribute USVString password;
+
+  [Throws]
+           attribute USVString host;
+
+  [Throws]
+           attribute USVString hostname;
+
+  [Throws]
+           attribute USVString port;
+
+  [Throws]
+           attribute USVString pathname;
+
+  [Throws]
+           attribute USVString search;
+
+  readonly attribute URLSearchParams searchParams;
+
+  [Throws]
+           attribute USVString hash;
 };
-URL implements URLUtils;
-URL implements URLUtilsSearchParams;
 
 partial interface URL {
   [Throws]
